[package]
name = "lighthouse"
description = "Virtual reality basestation power management in Rust"
version = "1.1.1"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ShayBox/Lighthouse"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1"
serde = "1"
btleplug = { version = "0.11", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap-verbosity-flag = { git = "https://github.com/ShayBoxs-Forks/clap-verbosity-flag.git", default-features = false, features = ["tracing"] }
clap = "4"
thiserror = "1"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
